--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://israelvarela.github.io/Israel-Varela-Portfolio-React-",
+  "homepage": "http://israelvarela.github.io/IV-Portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -46,6 +46,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.2.3"
   }
 }
