--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://israelvarela.github.io/IV-Portfolio/",
+  "homepage": "israelvarela.github.io/IV-Portfolio/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
