--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://israelvarela.github.io/iv-portfolio/",
+  "homepage": "https://israelvarela.github.io/iv-portfolio",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -11,11 +11,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "material-ui": "^0.20.2",
+    "material-ui": "^0.15.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-google-font-loader": "^1.1.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^5.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
