--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.2",
     "@mui-treasury/components": "^1.9.1",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/react-router-dom": "^5.3.3",
     "material-ui": "^0.15.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-google-font-loader": "^1.1.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
