--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "webpack": "^4.29.6"
   },
   "scripts": {
     "predeploy": "npm run build",
