--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^12.2.2",
     "@types/react-router-dom": "^5.3.3",
     "material-ui": "^0.15.0",
+    "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-google-font-loader": "^1.1.0",
+    "react-router": "^3.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
     "typescript": "^4.1.2",
