--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.4",
-    "@mui-treasury/components": "^1.9.1",
     "@mui/material": "^5.4.0",
+    "@mui/styled-engine-sc": "^5.3.0",
+    "@mui/styles": "^5.3.0",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/react-router-dom": "^5.3.3",
-    "material-ui": "^0.20.2",
+    "color": "^4.2.0",
+    "material": "^0.4.3",
+    "material-ui": "^0.15.0",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -24,9 +25,8 @@
     "react-router": "^3.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4",
-    "webpack": "^4.29.6"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -56,5 +56,16 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
+  },
+  "description": "# Table of Contents",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/israelvarela/IV-Portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/israelvarela/IV-Portfolio/issues"
   }
 }
