--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@mui-treasury/styling": "^0.2.8",
     "@mui/material": "^5.4.0",
     "@mui/styled-engine-sc": "^5.3.0",
     "@mui/styles": "^5.3.0",
@@ -16,6 +17,7 @@
     "@testing-library/user-event": "^12.2.2",
     "@types/react-router-dom": "^5.3.3",
     "color": "^4.2.0",
+    "link": "^0.1.5",
     "material": "^0.4.3",
     "material-ui": "^0.15.0",
     "prop-types": "^15.8.1",
@@ -24,8 +26,9 @@
     "react-google-font-loader": "^1.1.0",
     "react-router": "^3.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
+    "supertest": "^6.2.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
