--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/styles": "^4.11.4",
+    "@mui-treasury/styles": "^1.13.1",
     "@mui-treasury/styling": "^0.2.8",
     "@mui/material": "^5.4.0",
     "@mui/styled-engine-sc": "^5.3.0",
@@ -20,6 +22,7 @@
     "link": "^0.1.5",
     "material": "^0.4.3",
     "material-ui": "^0.15.0",
+    "mui-treasury": "^0.1.5-alpha.3",
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -29,7 +32,8 @@
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
     "supertest": "^6.2.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "webpack": "^5.68.0"
   },
   "scripts": {
     "predeploy": "npm run build",
